# magmsg-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  stack.yml  tsconfig.json  webpack.config.js
client/: App.ts  _theme.scss  customTypes.ts  index.scss  index.ts
client/components/: App.ts
client/components/Content/: Content.ts
client/components/Header/: Header.ts  header.scss
client/components/MessageCard/: MessageCard.ts  messagecard.scss
client/components/MessageGrid/: MessageGrid.ts  index.ts  messagegrid.scss
public/: index.html  main.css  main.js
src/: appenv.rs  authenticator.rs  catchers.rs  constants.rs  contexts.rs  dal.rs  log_line.rs  logs_pusher.rs  logs_writer.rs  main.rs  message.rs  message_request.rs  request_id.rs  request_logger.rs  routes.rs  s3_logger.rs  sdk.rs  utils.rs
templates/: index.hbs
