[package]
name = "magmsg-server"
version = "0.1.0"
authors = ["Yash Kulshrestha <yash.kulshrestha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde_json = "1.0"
serde_derive = "1.0.118"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json", "handlebars_templates", "helmet", "uuid", "serve"]
