[package]
name = "magmsg-server"
version = "0.1.0"
authors = ["Yash Kulshrestha <yash.kulshrestha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = "1.0.119"
serde_json = { version = "1.0.61", features = ["arbitrary_precision"]}
serde_derive = "1.0.118"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
uuid = { version = "0.8", features = ["v4"] }
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
rusoto_sts = "0.46.0"
rusoto_credential = "0.46.0"
dynomite = "0.10"
hyper = "0.14.2"
hyper-tls = "0.5.0"
chrono = "0.4.19"
async-trait = "0.1.42"
futures = "0.3.12"
tokio = {version = "1.0.2", features = ["full"] }
rusoto_s3 = "0.46.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json", "handlebars_templates", "helmet", "uuid", "serve"]
